[flake8]
builtins = long, xrange
exclude = prophyc/parsers/clang, prophyc/six.py
ignore = E251, E302, E501, E701
	# E251 unexpected spaces around keyword / parameter equals
	# E302 expected 2 blank lines, found 1
	# E501 line too long
    # E701 multiple statements on one line (colon)

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
